--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,10 @@
             content="Web site created using create-react-app"
         />
         <meta name="crsf-token" content="{{ crsfToken }}" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+            rel="stylesheet"
+        />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
