--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,7 +28,7 @@
         />
         <meta name="crsf-token" content="{{ crsfToken }}" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap"
             rel="stylesheet"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
